kubernetes/apps/flux-system/flux-instance/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: "conditions: [\"[STATUS] == 404\"]"
spec:
  hostnames:
    - flux-webhook.darkfellanetwork.com
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
